# TypedAnt

./: Cargo.toml  LICENSE  README.md
ant_crate_def/: Cargo.toml
ant_crate_def/src/: definition.rs  lib.rs
ast/: Cargo.toml
ast/src/: expr.rs  lib.rs  node.rs  stmt.rs
ast/src/expressions/: ident.rs  mod.rs  visibility_expr.rs
docs/syntax/: control-flow.md  grammar_guidelines.md  index.md  items.md  literal.md  variable_and_constant.md
examples/: if_let_simple.ant  if_let_test.ant
file_runner/: Cargo.toml
file_runner/src/: lib.rs
id/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: error.rs  lib.rs  test.rs
name_resolver/: Cargo.toml
name_resolver/src/: error.rs  lib.rs  test.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  precedence.rs  tests.rs
parser/src/parse_functions/: mod.rs  parse_assign.rs  parse_block.rs  parse_bool.rs  parse_bool_and_or.rs  parse_build_struct.rs  parse_cast.rs  parse_const.rs  parse_enum.rs  parse_enum_variant.rs  parse_extern.rs  parse_field_access.rs  parse_func.rs  parse_grouped_expr.rs  parse_if.rs  parse_impl.rs  parse_num.rs  parse_prefix.rs  parse_return.rs  parse_sizeof.rs  parse_static_member_access.rs  parse_static_member_access_or_turbo_fish.rs  (+11 more)
repl/: Cargo.toml
repl/src/: lib.rs
src/: main.rs
token/src/: token.rs  token_type.rs
ty/: Cargo.toml
ty/src/: lib.rs
type_checker/: Cargo.toml
type_checker/src/: ant_crate.rs  constants.rs  definition.rs  error.rs  lib.rs  module.rs  scope.rs  test.rs  ty.rs  ty_context.rs
type_checker/src/table/: mod.rs  test.rs
type_checker/src/type_infer/: constraint.rs  infer_context.rs  mod.rs
type_checker/src/typed_ast/: mod.rs  typed_expr.rs  typed_node.rs  typed_stmt.rs
type_checker/src/typed_ast/typed_expressions/: ident.rs
typed_ast/: Cargo.toml
typed_ast/src/: lib.rs  typed_expr.rs  typed_node.rs  typed_stmt.rs
typed_module/: Cargo.toml
typed_module/src/: lib.rs  module.rs  ty_context.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+2 files in other folders)
