[package]
name = "typed_ant"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }

repl = { path = "./repl" }
file_runner = { path = "./file_runner" }

[workspace]
members = ["ast", "lexer", "repl", "token", "utils", "parser", "type_checker", "file_runner", "name_resolver", "ant_crate_def"]
