[package]
name = "name_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.13.0"
type_checker = { path = "../type_checker" }
ast = { path = "../ast" }
token = { path = "../token" }
ant_crate_def = { path = "../ant_crate_def" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }