[package]
name = "repl"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
type_checker = { path = "../type_checker" }
name_resolver = { path = "../name_resolver" }
typed_module = { path = "../typed_module" }
typed_ast = { path = "../typed_ast" }